--- a/Css/CommonStyles.css
+++ b/Css/CommonStyles.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css");
+
 .test-class{
     height: 200px;
     width: 200px;
