--- a/Css/CommonStyles.css
+++ b/Css/CommonStyles.css
@@ -1,8 +1,16 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css");
 
-.test-class{
-    height: 200px;
-    width: 200px;
-    box-shadow: 2px 2px black;
-    border:30px solid red;
+body{
+    height: 100vh;
+}
+
+.screen-center{
+    width: 100%;
+    height: 98.6%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.app-drop-shadow{
+    filter: drop-shadow(  0 1rem 1rem rgba(0,0,0,.75)) ;
 }
