--- a/Css/CommonStyles.css
+++ b/Css/CommonStyles.css
@@ -3,6 +3,29 @@
 body{
     height: 100vh;
 }
+/* width */
+::-webkit-scrollbar {
+     width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+     box-shadow: inset 0 0 5px rgb(77, 126, 141);
+     border-radius: 0px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+     background: #203a43;
+     border-radius: 0px;
+     box-shadow: inset 0 0 5px rgb(255, 255, 255);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+     background: #1a5a5cf3;
+}
+
 
 .screen-center{
     width: 100%;
@@ -13,4 +36,22 @@ body{
 }
 .app-drop-shadow{
     filter: drop-shadow(  0 1rem 1rem rgba(0,0,0,.75)) ;
+}
+.link-frame{
+    height: 25vh;
+    width: 25vw;
+    border:0.2rem solid black;
+    border-radius: 2rem;
+    filter: drop-shadow(  0 1rem 1rem rgba(0,0,0,.75)) ;
+    background-color: rgba(255, 255, 255, 0.363);
+}
+.link{
+    transform: translateY(-2.0rem);
+}
+.link button{
+    border-radius: 2rem;
+    padding: 1rem;
+    border: none;
+    background-color: rgb(36, 21, 252);
+    color: white;
 }
