--- a/Parallex/Parallex.css
+++ b/Parallex/Parallex.css
@@ -37,9 +37,11 @@ header {
 }
 
 .title {
-  font-size: 7rem;
-  color: white;
-  text-shadow: 0 0 5px black;;
+  font-size: 20vw;
+  color: rgba(255, 255, 255, 0.795);
+  text-shadow:  5px 5px 15px rgba(0, 0, 0, 1);
+  text-decoration: solid;
+  -webkit-text-stroke: 5px rgba(0, 0, 0, 0.3);
 }
 
 section {
@@ -50,4 +52,5 @@ section {
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter:blur(20px);
   color: white;
+  border-radius:1rem;
 }
