--- a/Css/CommonStyles.css
+++ b/Css/CommonStyles.css
@@ -1,8 +1,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined");
 
-body{
-    height: 100vh;
-}
+
 /* width */
 ::-webkit-scrollbar {
      width: 10px;
@@ -26,32 +26,128 @@ body{
      background: #1a5a5cf3;
 }
 
+.screen-center {
+     width: 100vw;
+     height: 100vh;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+}
+.app-drop-shadow {
+     filter: drop-shadow(0 1rem 1rem rgba(0, 0, 0, 0.75));
+}
+.link-frame {
+     height: 25vh;
+     width: 25vw;
+     border: 0.2rem solid black;
+     border-radius: 2rem;
+     filter: drop-shadow(0 1rem 1rem rgba(0, 0, 0, 0.75));
+     background-color: rgba(255, 255, 255, 0.363);
+}
+.link {
+     transform: translateY(-2rem);
+}
+.link button {
+     border-radius: 2rem;
+     padding: 1rem;
+     border: none;
+     background-color: rgb(36, 21, 252);
+     color: white;
+}
 
-.screen-center{
-    width: 100%;
-    height: 98.6%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.app-card {
+     border-radius: 2rem;
+     width: 25vw;
+     /* font-family: "Verdana",'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
-.app-drop-shadow{
-    filter: drop-shadow(  0 1rem 1rem rgba(0,0,0,.75)) ;
+.app-card .app-card-image {
+     border-top-right-radius: 2rem;
+     border-top-left-radius: 2rem;
+     width: 100%;
 }
-.link-frame{
-    height: 25vh;
-    width: 25vw;
-    border:0.2rem solid black;
-    border-radius: 2rem;
-    filter: drop-shadow(  0 1rem 1rem rgba(0,0,0,.75)) ;
-    background-color: rgba(255, 255, 255, 0.363);
+
+.app-card .app-card-body {
+     padding: 1rem;
+     font-size: 0.9rem;
 }
-.link{
-    transform: translateY(-2.0rem);
+.app-card .app-card-image-container {
+     border-top-right-radius: 2rem;
+     border-top-left-radius: 2rem;
+     background: url("./../Randoms/Images/Biryani.jpg");
+     height: 28vh;
+     background-size: cover;
 }
-.link button{
-    border-radius: 2rem;
-    padding: 1rem;
-    border: none;
-    background-color: rgb(36, 21, 252);
-    color: white;
+.z-index-1 {
+     z-index: 1;
+}
+.left-icon {
+     content: "<";
+     border-radius: 50%;
+     background: rgba(255, 255, 255, 0.5);
+     border: 0.2rem solid rgba(0, 0, 0, 0.5);
+     height: 1rem;
+     width: 1rem;
+}
+.padding-2px {
+     padding-left: 5px;
+     padding-right: 5px;
+}
+.right-icon {
+     content: ">";
+     background: rgba(0, 0, 0, 0.5);
+     border: 0.2rem solid rgba(255, 255, 255, 0.5);
+}
+.material-icons {
+     /* vertical-align: bottom; */
+     font-size: 1rem;
+}
+.font-1-and-half-rem {
+     font-size: 1.5rem;
+}
+.margin-top {
+     margin-top: -0.3rem;
+}
+.safety-delivery-logo {
+     height: 1.3rem;
+}
+.app-sub-text {
+     font-size: small;
+}
+.app-text-small {
+     font-size: smaller;
+}
+hr {
+     color: rgba(0, 0, 0, 0.5);
+}
+.swipe-icon {
+     font-size: 1.5rem;
+     color: white;
+     background-color: rgba(0, 0, 0, 0.5);
+     border-radius: 50%;
+     padding: 0.3rem;
+}
+.new-shadow{
+    /* filter: drop-shadow(0 1rem 1rem rgba(0, 0, 0, 0.75)); */
+    box-shadow: 0px 15px 25px -15px #111;
+}
+.scale{
+     transform: scale(0.7);
+     margin-left: 0% !important;
+}
+.hidden{
+     display: none;
+}
+@media only screen and (max-width: 600px) {
+     .app-card {
+          width: 90vw;
+          font-family: "Verdana";
+     }
+     .app-sub-text {
+          font-size: x-small;
+     }
+     .app-card .app-card-body {
+          padding: 1rem;
+          font-size: 0.8rem;
+     }
 }
