--- a/Css/index.css
+++ b/Css/index.css
@@ -1,32 +1,109 @@
-
-body{
-    animation: body-color-change 4s  infinite alternate;
-    height: 80vh;
-    width:100vh;
-}
-.main img{
-    animation: up-and-down 4s infinite alternate;
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Ubuntu:wght@300&display=swap");
+body {
+     animation: body-color-change 4s infinite alternate;
+     height: 98vh;
+     width: 100vw;
+     font-family: "Ubuntu", sans-serif;
 }
 @keyframes body-color-change {
-    0%{
-        background:  peachpuff;
-    }
-    25%{
-        background:papayawhip;
-    }
-    50%{
-        background: mistyrose;
-    }
-    100%{
-        background:azure;
-    }
+     0% {
+          background: peachpuff;
+     }
+     25% {
+          background: papayawhip;
+     }
+     50% {
+          background: mistyrose;
+     }
+     100% {
+          background: bisque;
+     }
 }
-@keyframes up-and-down {
-    0%{
-        transform: translateY(0px);
-    }
-    100%{       
-        transform: translateY(20px);
+.center-content {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     width: 100%;
+     height: 100%;
+}
+.font-larger {
+     font-size: larger;
+}
+.font-dancing-script {
+     font-family: "Dancing Script", sans-serif;
+}
+.text-shadow-large {
+     text-shadow: 2px 2px 8px black;
+}
+.text-shadow-none {
+     text-shadow: none;
+}
+.white-space-nowrap {
+     white-space: nowrap;
+}
+.home-page-layout {
+     display: grid;
+     /* grid-template-rows: 1.5fr 0.5fr 1.5fr 2fr;
+     grid-template-columns: 1fr 1fr 1fr; */
+     height: 100%;
+     width: 98%;
+}
+.home-page-layout .home-page-element {
+     padding-left: 2rem;
+     padding-right: 1rem;
+     text-shadow: 1px 1px 5px grey;
+     /* border: 2px solid red;; */
+}
+.home-page-layout .home-page-element.intro {
+  
+}
+.home-page-layout .home-page-element.bio {
+     
+     font-size: x-large;
+     /* display: flex;
+     align-items: flex-end; */
+}
+.home-page-layout .home-page-element.pic {
+  
+}
+.home-page-layout .home-page-element.pic .img-container {
+     filter: drop-shadow(5px 5px 20px black);
+     border-radius: 30%;
+     background-color: grey;
+     max-width: fit-content;
+     max-width: -moz-fit-content;
+}
 
-    }
+.home-page-layout .home-page-element.pic .img-container:hover {
+     transform: scale(0.9);
+     filter: drop-shadow(5px 5px 20px black);
+     box-shadow: 5px 5px 20px black;
+     background-color: transparent;
+     border-radius: 50%;
+}
+.home-page-layout .home-page-element.pic .img-container img {
+     border-radius: 30%;
+     filter: drop-shadow(2px 2px 15px black) grayscale(1);
+}
+.home-page-layout .home-page-element.pic .img-container img:hover {
+     transform: scale(1.2) translateY(-30px);
+     border-radius: 50%;
+     filter: grayscale(0);
+}
+.home-page-layout .home-page-element.skills {
+    
+     font-size: x-large;
+}
+.home-page-layout .home-page-element.skills ul {
+     list-style: none;
+}
+
+
+.home-page-layout .home-page-element.buttons .btn {
+     box-shadow: 1px 1px 6px grey;
+}
+
+
+@media screen &&  {
+     
 }
