--- a/Css/index.css
+++ b/Css/index.css
@@ -1,22 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Ubuntu:wght@300&display=swap");
 body {
-     animation: body-color-change 4s infinite alternate;
+     animation: body-color-change 2s infinite alternate;
      height: 98vh;
      width: 100vw;
      font-family: "Ubuntu", sans-serif;
 }
 @keyframes body-color-change {
      0% {
-          background: peachpuff;
-     }
-     25% {
-          background: papayawhip;
-     }
-     50% {
-          background: mistyrose;
+         background: rgb(205, 253, 255);
      }
      100% {
-          background: bisque;
+           background: rgb(237, 255, 187);
+          
      }
 }
 .center-content {
